# bootstrapper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  steam_install_dir.h  steam_install_dir_win32.cpp
.github/workflows/: build.yml
